# eeg_connectivity_manuscript

./: .coverage  README.md  pyproject.toml
.github/workflows/: lint.yml  tests.yml
experimental/Between-within-variance/: real_variance.ipynb  real_variance.py
experimental/epoch-length-assessments/: calculating_outliers.ipynb  epoch_length_graph.ipynb  epoch_length_means_eff.py  epoch_length_means_func.py
experimental/mean-EC-EO/: mean_ec_eo.ipynb  mean_ec_eo.py
experimental/metrics-py-file/: ciplv.py  coh.py  ddtf_revised.ipynb  gpdc_revised.ipynb  gpu_job_script_template.sh  imcoh_kramer.ipynb  psgp_revised.ipynb
introduction/: calculating_correlations.py  confounders_fig.ipynb  confounders_fig.py  corr_matrices.ipynb  corr_matrices.py
simulated/: combined_mse_corr_figs.ipynb  combined_mse_corr_figs.py  copy_topology_non-dyn.ipynb  copy_topology_non-dyn.py  simulations_dynamic.ipynb  simulations_dynamic.py  simulations_non_dynamic.ipynb  simulations_non_dynamic.py  topologies_combined_figs.ipynb  topologies_dynamic.ipynb  topologies_dynamic.py  topologies_non-dynamic.ipynb
tests/: test_constants.py  test_experimental.py  test_plotting.py  test_simulation.py  test_statistics.py
utils/: constants.py  experimental.py  plotting.py  simulation.py  statistics.py
